--- a/index.html
+++ b/index.html
@@ -14,12 +14,25 @@
 </head>
 <body>
 
-  You’ve used 815 GB of your storage
-
-  185 GB Left
-  
-  0 GB
-  1000 GB
+  <div class="wrapper">
+    <div class="fylo">
+      <img src="images/logo.svg" alt="Fylo logo">
+      <div class="fylo__flex-wrapper">
+        <img src="images/icon-document.svg" alt="document icon">
+        <img src="images/icon-folder.svg" alt="folder icon">
+        <img src="images/icon-upload.svg" alt="upload icon">
+      </div>
+    </div>
+    <div class="storage">
+      <p class="storage__used">You’ve used <span class="bold">815 GB</span> of your storage</p>
+      <p class="storage__left"><span class="bold">185 GB</span> Left</p>
+      
+      <div class="storage__flex-wrapper">
+        <p class="storage__min-storage bold">0 GB</p>
+        <p class="storage__max-storage bold">1000 GB</p>
+      </div>
+    </div>
+  </div>
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
