added progress bar

--- a/index.html
+++ b/index.html
@@ -26,7 +26,11 @@
     <div class="storage">
       <p class="storage__used">You’ve used <span class="bold">815 GB</span> of your storage</p>
       <p class="storage__left"><span class="bold">185 GB</span> Left</p>
-      
+      <div class="progress-bar">
+        <div class="active-bar">
+          <div class="white-point"></div>
+        </div>
+      </div>
       <div class="storage__flex-wrapper">
         <p class="storage__min-storage bold">0 GB</p>
         <p class="storage__max-storage bold">1000 GB</p>
